# rtic-zero-app

./: Cargo.toml  README.md
.cargo/: config.toml
examples/: ex1.rs
src/: app.rs  gen.rs  lib.rs  main.rs  rtic_zero.rs
