[package]
name = "rtic-zero-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.4"
panic-halt = "0.2.0"
lm3s6965 = "0.1.3"
cortex-m-semihosting = "0.3.3"

# [lib]
# name = "rtic_zero"

[dependencies.panic-semihosting]
features = ["exit"]
version = "0.5.2"

[patch.crates-io]
lm3s6965 = { git = "https://github.com/japaric/lm3s6965" }